test/Fail/Erased-cubical-Open-public/Cubical.agda
{-# OPTIONS --cubical #-}

module Erased-cubical-Open-public.Cubical where

-- It instantiates and exports code from
-- Erased-cubical-Open-public.Erased.

open import Erased-cubical-Open-public.Erased Set public
